# cookiecutter-hyperhypermodern-python

./: .pre-commit-config.yaml  README.md  cookiecutter.json  noxfile.py
docs/: guide.md
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .editorconfig  .flake8  .gitignore  .license-header  .pre-commit-config.yaml  .readthedocs.yml  noxfile.py  pyproject.toml  {% if cookiecutter.add_dockerfile -%} Dockerfile {%- endif %}  {% if cookiecutter.data_directory -%} setup.py {%- endif %}
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  {% if cookiecutter.cli -%} __main__.py {%- endif %}
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/{% if cookiecutter.cli -%} cli {%- endif %}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/{% if cookiecutter.cli -%} cli {%- endif %}/commands/: main.py
{{cookiecutter.project_name}}/tests/{% if cookiecutter.cli -%} cli {%- endif %}/: test_main.py
